--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,8 +22,21 @@ services:
       - "3000:3000"
     depends_on:
       - db
+
+  web:
+    build:
+      context: containers/nginx
+    volumes:
+      - public-data:/webapp/public
+      - tmp-data:/webapp/tmp
+    ports:
+      - 80:80
+    depends_on:
+      - app
   
 
 volumes:
+  public-data:
+  tmp-data:
   mysql-data:
   bundle:      #bundle installした後buildし直さなくてよくなる
