--- a/containers/nginx/nginx.conf
+++ b/containers/nginx/nginx.conf
@@ -1,6 +1,8 @@
-upstream rug-match {
+# プロキシ先の指定
+# Nginxが受け取ったリクエストをバックエンドのpumaに送信
+upstream webapp {
   # ソケット通信したいのでpuma.sockを指定
-  server unix:///rug-match/tmp/sockets/puma.sock;
+  server unix:///webapp/tmp/sockets/puma.sock;
 }
 
 server {
@@ -12,19 +14,19 @@ server {
   error_log  /var/log/nginx/error.log;
 
   # ドキュメントルートの指定
-  root /rug-match/public;
+  root /webapp/public;
 
   client_max_body_size 100m;
   error_page 404             /404.html;
   error_page 505 502 503 504 /500.html;
-  try_files  $uri/index.html $uri @rug-match;
+  try_files  $uri/index.html $uri @webapp;
   keepalive_timeout 5;
 
   # リバースプロキシ関連の設定
-  location @rug-match {
+  location @webapp {
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Host $http_host;
-    proxy_pass http://rug-match;
+    proxy_pass http://webapp;
   }
 }
