--- a/containers/nginx/Dockerfile
+++ b/containers/nginx/Dockerfile
@@ -4,7 +4,7 @@ FROM nginx:1.15.8
 RUN rm -f /etc/nginx/conf.d/*
 
 # Nginxの設定ファイルをコンテナにコピー
-ADD nginx.conf /etc/nginx/conf.d/app.conf
+ADD nginx.conf /etc/nginx/conf.d/rug-match.conf
 
 # ビルド完了後にNginxを起動
 CMD /usr/sbin/nginx -g 'daemon off;' -c /etc/nginx/nginx.conf
