--- a/containers/nginx/nginx.conf
+++ b/containers/nginx/nginx.conf
@@ -1,26 +1,32 @@
-upstream app {
-  server unix:///app/tmp/sockets/puma.sock;
+# プロキシ先の指定
+# Nginxが受け取ったリクエストをバックエンドのpumaに送信
+upstream rug-match {
+  # ソケット通信したいのでpuma.sockを指定
+  server unix:///rug-match/tmp/sockets/puma.sock;
 }
 
 server {
   listen 80;
-  server_name localhost;
+  # ドメインもしくはIPを指定
+  server_name example.com [or 192.168.xx.xx [or localhost]];
 
   access_log /var/log/nginx/access.log;
   error_log  /var/log/nginx/error.log;
 
-  root /app/public;
+  # ドキュメントルートの指定
+  root /rug-match/public;
 
   client_max_body_size 100m;
   error_page 404             /404.html;
   error_page 505 502 503 504 /500.html;
-  try_files  $uri/index.html $uri @app;
+  try_files  $uri/index.html $uri @rug-match;
   keepalive_timeout 5;
 
-  location @app {
+  # リバースプロキシ関連の設定
+  location @rug-match {
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Host $http_host;
-    proxy_pass http://app;
+    proxy_pass http://rug-match;
   }
 }
