--- a/containers/nginx/nginx.conf
+++ b/containers/nginx/nginx.conf
@@ -8,7 +8,7 @@ upstream rug-match {
 server {
   listen 80;
   # ドメインもしくはIPを指定
-  server_name example.com [or 192.168.xx.xx [or localhost]];
+  server_name 18.180.51.162;
 
   access_log /var/log/nginx/access.log;
   error_log  /var/log/nginx/error.log;
